# Opitkovanie-AI-Studio

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: release.yml
backend/: config_store.py  dub_pipeline.py  install.ps1  install.sh  jobs.py  local_translate.py  music_pipeline.py  omnivoice_engine.py  requirements-backend.txt  requirements-common.txt  requirements-dubmaster.txt  requirements-shorts.txt  requirements.txt  server.py  tts_pipeline.py  videogen_pipeline.py
backend/engine_templates/videogen/: README.md  pyproject.toml  requirements.txt
backend/engine_templates/videogen/scripts/: download_models.py  enhance_image_prompt.py  run.sh  setup.sh
backend/shims/streamlit/: __init__.py
electron/: main.cjs  preload.cjs  updater.cjs
scripts/: generate-release-notes.cjs
src/: App.css  App.tsx  index.css
src/components/: DropZone.tsx  FilmTimeline.tsx  FontSelect.tsx  JobProgress.tsx  Lightbox.tsx  ModelManager.tsx  ModuleManager.tsx  PresetBar.tsx  RunConsole.tsx  SceneEditor.tsx  SegmentEditor.tsx  StorageManager.tsx  StyledPreview.tsx  SubtitleEditor.tsx  SubtitlePreview.tsx  VoiceManager.tsx  VoiceSynth.tsx  WaveTrack.tsx  ui.tsx
src/lib/: api.ts  fonts.ts  jobFormat.ts  useJob.ts  usePersistentState.ts  useStudio.ts
src/types/: dubcut.d.ts
src/views/: Dashboard.tsx  DubMaster.tsx  ImageGenerator.tsx  MusicGenerator.tsx  Settings.tsx  Shorts.tsx  Subtitles.tsx  TextToAudio.tsx  VideoGenerator.tsx
